uploads: fix wrapping of tabs in edit panel.
Fix an issue where, if you resized the edit panel to be too small, it would wrap the tabs and
ratings onto a new line, which pushed the rest of the edit panel down. Now they're kept on a single
horizontally scrollable line. This tends to work better on mobile than on desktop, since you can
swipe to scroll on mobile, but on desktop you have to click and drag the scrollbar.

--- a/app/javascript/src/styles/common/simple_form.scss
+++ b/app/javascript/src/styles/common/simple_form.scss
@@ -1,4 +1,5 @@
 @import "../base/020_base";
+@import "../common/utilities";
 
 form.simple_form {
   margin: 0 0 1em 0;
@@ -104,11 +105,16 @@ form.simple_form {
 
       // Show radio buttons as a rounded button group.
       &.radio-button-group {
+        @extend %thin-x-scrollbar;
+
+        white-space: nowrap;
+
         input {
           display: none;
         }
 
         .radio label {
+          display: inline-block;
           margin: 0;
           margin-right: 0;
           padding: 0.25rem 0.33rem;
